# erfilter_train

./: .gitignore  CMakeLists.txt  build_csv_datasetNM1.py  build_csv_datasetNM2.py  char_datasetNM1.csv  char_datasetNM2.csv  extract_features.cpp  extract_featuresNM1.cpp  extract_featuresNM2.cpp  train_classifierNM1.cpp  train_classifierNM2.cpp  train_classifiers.cpp
data/char/: char_00000.tiff  char_00001.tiff  char_00004.tiff  char_00005.tiff  char_00007.tiff  char_00008.tiff  char_00009.tiff  char_00010.tiff  char_00012.tiff  char_00017.tiff  char_00020.tiff  char_00022.tiff  char_00023.tiff  char_00024.tiff  char_00027.tiff  char_00029.tiff  char_00030.tiff  char_00031.tiff  char_00035.tiff  char_00038.tiff  char_00039.tiff  char_00040.tiff  char_00041.tiff  char_00042.tiff  char_00044.tiff  char_00050.tiff  char_00051.tiff  char_00054.tiff  char_00055.tiff  char_00057.tiff  char_00058.tiff  char_00061.tiff  char_00062.tiff  char_00063.tiff  char_00067.tiff  char_00069.tiff  char_00071.tiff  char_00073.tiff  char_00076.tiff  char_00078.tiff  (+28 more)
plate_data/char/: char_00002.tiff  char_00003.tiff  char_00006.tiff  char_00011.tiff  char_00013.tiff  char_00014.tiff  char_00015.tiff  char_00016.tiff  char_00018.tiff  char_00019.tiff  char_00021.tiff  char_00025.tiff  char_00026.tiff  char_00028.tiff  char_00032.tiff  char_00033.tiff  char_00034.tiff  char_00036.tiff  char_00037.tiff  char_00043.tiff  char_00045.tiff  char_00046.tiff  char_00047.tiff  (+34 more)
trained_classifiers/: trained_classifierNM1.xml  trained_classifierNM2.xml
training_data/: datasetNM1.csv  datasetNM2.csv
